--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ psycopg2-binary = "*"
 whitenoise = "*"
 django-heroku = "*"
 bcrypt = "*"
+social-auth-app-django = "*"
 
 [requires]
 python_version = "3.6"
