--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,7 @@ whitenoise = "*"
 django-heroku = "*"
 bcrypt = "*"
 social-auth-app-django = "*"
+django_user_agents = "*"
 
 [requires]
 python_version = "3.6"
