--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,7 @@ django-heroku = "*"
 bcrypt = "*"
 social-auth-app-django = "*"
 django_user_agents = "*"
+matplotlib = "*"
 
 [requires]
 python_version = "3.6"
