--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,7 @@ bcrypt = "*"
 social-auth-app-django = "*"
 django_user_agents = "*"
 matplotlib = "*"
+pillow = "*"
 
 [requires]
 python_version = "3.6"
