--- a/Pipfile
+++ b/Pipfile
@@ -7,7 +7,6 @@ dj-database-url = "*"
 django = "*"
 gunicorn = "*"
 psycopg2 = "*"
-psycopg2-binary = "*"
 whitenoise = "*"
 django-heroku = "*"
 bcrypt = "*"
@@ -15,6 +14,7 @@ social-auth-app-django = "*"
 django_user_agents = "*"
 matplotlib = "*"
 pillow = "*"
+"psycopg2-binary" = "*"
 
 [requires]
 python_version = "3.6"
